crates/freeflow-cli/tests/snapshots/cli_integration__prospect_help_is_a_stable_interface_contract.snap
---
source: crates/freeflow-cli/tests/cli_integration.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
Prospection : opportunités, pipeline, interactions

Usage: freeflow prospect [OPTIONS] <COMMAND>

Commands:
  create           Crée une nouvelle opportunité, en étape Qualification
  show             Affiche une opportunité
  list             Liste les opportunités ouvertes et non archivées (ajoutez `--closed`/`--archived` pour élargir)
  edit             Modifie une opportunité ouverte — seuls les champs fournis changent. Ne peut pas changer l'étape (utilisez `advance`/`win`/`lose`) ni le motif de perte
  advance          Fait avancer une opportunité vers une autre étape ouverte
  win              Gagne une opportunité : crée la mission forfait correspondante
  lose             Perd une opportunité, avec un motif structuré
  archive          Retire une opportunité des listes actives sans la supprimer — un axe distinct de gagnée/perdue : une opportunité archivée n'est ni l'une ni l'autre, juste sans objet
  unarchive        Réintègre une opportunité archivée dans les listes actives
  rm               Supprime une opportunité pour de bon — refusée si un devis la référence (archivez-la dans ce cas)
  references       Ce qui empêche une opportunité d'être supprimée
  log-interaction  Journalise une interaction (appel, email, réunion, note)
  interaction      Interactions d'une opportunité : modifier ou supprimer une entrée déjà journalisée (`log-interaction` reste le verbe de création)
  late             Opportunités ouvertes dont la prochaine action est en retard
  orphans          Opportunités ouvertes sans prochaine action (filet de sécurité)
  pipeline         Pipeline pondéré et répartition par étape
  help             Print this message or the help of the given subcommand(s)

Options:
      --db <DB>
          Chemin du coffre chiffré. Sinon, lu depuis `FREEFLOW_DB`
      --json
          Imprime le résultat en JSON plutôt qu'en texte lisible — le contrat que consomme un agent
      --actor <ACTOR>
          Qui déclenche la commande : `human` (défaut), `system`, ou `agent:<session>` [default: human]
      --dry-run
          N'écrit rien : montre ce qui serait fait
      --no-color
          Désactive la coloration (déjà minimale) de la sortie humaine
      --passphrase-file <PASSPHRASE_FILE>
          Lit la passphrase dans ce fichier (refusé si son mode est plus ouvert que 0600)
      --passphrase-command <PASSPHRASE_COMMAND>
          Exécute cette commande et prend sa sortie standard comme passphrase — ex. `pass show freeflow`, `op read op://Perso/freeflow/passphrase`
      --passphrase-stdin
          Lit la passphrase sur l'entrée standard (une ligne)
      --non-interactive
          N'invite jamais au terminal : échoue proprement si aucune source non interactive n'a fourni de passphrase, plutôt que de bloquer en attente d'une frappe
      --remember
          Met la clé en cache dans le trousseau OS pour les appels suivants (jamais automatique)
      --ttl <TTL>
          Durée de la session mise en cache (défaut 12h). Implique `--remember`
  -h, --help
          Print help
